Added all pages needed and added all components for fries

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 <!-- just a little space so i can see -->
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Ah Yes, My Easy To Read Recipes</h1>
+        <p>Do YOU want a break from the ads? Looking for some easy to follow, <strong>easy to read</strong> recipes? I gotchu right here buddy :] </p>
+
+
+        <ul>
+            <li><a href="recipes/fries.html" target="_blank">Some Ez Baked Fries</a></li>
+            <li><a href="recipes/chickendump.html" target="_blank">Nummy Num Chickey N Dumpy</a> </li>
+            <li><a href="recipes/sushi.html" target="_blank">Sushi.</a> </li>
+        </ul>
+        
 
 
     </body>
