Set up page with image and lists

--- a/recipes/chickendump.html
+++ b/recipes/chickendump.html
@@ -9,18 +9,33 @@
 <!--             space between head and body             -->
 
     <body>
+        <h1>Lets Make Some Dumplings!</h1>
+        <img src="../images/chickendump.webp">
 
+        <h2>Easy Chicken and Dumplings Recipe!</h2>
+        <p>Chicken and Dumplings are the ultimate comfort food. Period. The fluffy dumplings combined with flavorful chicken soup make this meal irresistible! In just minutes from now, you’ll be enjoying an amazingly creamy and delicious dinner that tastes like it’s made from scratch!</p>
 
+        <h3>Ingredients:</h3>
+            <ul>
+                <li>32 ounces Chicken Broth</li>
+                <li>10.5 ounces Cream Of Chicken Soup</li>
+                <li>2 cups cooked shredded chicken</li>
+                <li>2 cans refrigerated biscuits</li>
+                <li>pepper to taste</li>
+            </ul>
 
+        <h3>Instructions:</h3>
+            <ol>
+                <li>Heat chicken broth in pot on medium-high heat and cook until gently boiling. Add chicken.</li>
+                <li>Cut biscuits into small pieces and place in chicken broth mixture. Stir well.</li>
+                <li>Add cream of chicken soup and stir.</li>
+                <li>Put a small layer of pepper over dumplings.</li>
+                <li>Reduce the heat, stir well, and let simmer for 5-10 minutes.</li>
+            </ol>
 
-
-
-
-
-
-
-
-
+        <h2>Notes:</h2>
+        <p>Be sure to use cooked chicken when making this recipe.  Leftover rotisserie chicken is a great option.  In a pinch, you can use prepackaged cooked chicken that you find in the meat section next to lunch meat.</p>
+        <p>Cut the dough into small pieces. Smaller dumplings cook better than larger dumplings.  The dough will expand once it is placed in the warm broth.</p>
     </body>
 
 </html>
