updated index page with more flair. added sushi

--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -9,18 +9,34 @@
 <!--             space between head and body             -->
 
     <body>
+        <h1>Lets Make Some Awesome Sushi!</h1>
+        <img src="../images/sushi.jpg">
 
+        <h2>Homemade Sushi!</h2>
+        <p>Homemade Sushi is so much cheaper than at the restaurant. Plus, 
+        it’s easy and fun to make your own rolls at home, so you can put all
+        your favorite ingredients into your perfect custom roll — here’s how!</p>
 
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>6 sheets sushi seaweed</li>
+            <li>1 batch prepared sushi rice</li>
+            <li>1/2 lb sashimi-grade raw salmon or desired raw fish of choice</li>
+            <li>4 oz cream cheese sliced into strips</li>
+            <li>1 avocado sliced</li>
+            <li>spicy mayo for serving</li>
+        </ul>
 
+        <h3>Instructions:</h3>
+        <ol>
+            <li>Place the seaweed on a bamboo mat, then cover the sheet of seaweed with an even layer of prepared sushi rice</li>
+            <li>Smooth gently with a rice paddle.</li>
+            <li>Layer salmon, cream cheese, and avocado on the rice.</li>
+            <li>Roll it tightly, then slice with a knife and enjoy!</li>
+        </ol>
 
-
-
-
-
-
-
-
-
+        <h2>Notes:</h2>
+        <p>I do not recommend trying to keep leftovers, particularly if you are using raw fish. Even if you do cooked fish and vegetables, once the rice is hard and cold in the fridge, it won’t be as enjoyable to eat.</p>
     </body>
     
 </html>
