--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 <!-- just a little space so i can see -->
 
     <body>
-        <h1>Ah Yes, My Easy To Read Recipes</h1>
-        <p>Do YOU want a break from the ads? Looking for some easy to follow, <strong>easy to read</strong> recipes? I gotchu right here buddy :] </p>
+        <h1>Are YOU sad and confused with life?</h1>
+        <img src="cursed-images/facepalm.jpg">
+        <h3>Do YOU have trouble getting out of bed to make FOOD even though you're HUNGRY?</h3>
+        <img src="cursed-images/sad-cry.jpg">
+        <h3>its okay. we've all been there</h3>
+        <img src="cursed-images/chew-arm.jpg">
+        <h3>rabid, hungry, and angry at the world</h3>
+        <img src="cursed-images/confused-at-screen.jpg">
+        <h2> and wishing life was better than this</h2>
+        <h4>and while i can't help you with all that sad stuff, i can give you these really easy instructions for food i like to make </h4>
+        <img src="cursed-images/sad-but-its-okay.jpg">
+        <h2>Uh...  good luck? i hope u feed yourself buddy <3 </h2>
 
 
         <ul>
@@ -19,7 +29,6 @@
             <li><a href="recipes/sushi.html" target="_blank">Sushi.</a> </li>
         </ul>
         
-
 
     </body>
 
